--- a/src/app/components/app-component/app.component.css
+++ b/src/app/components/app-component/app.component.css
@@ -3,8 +3,11 @@
   flex-direction: column;
   height: 100%;
 }
-.content {
+.container{
   position: relative;
   flex-grow: 1;
   display: flex;
+}
+.content{
+  flex-grow: 1;
 }
