--- a/src/app/components/app-component/app.component.html
+++ b/src/app/components/app-component/app.component.html
@@ -1,7 +1,10 @@
 <div class="wrapper">
   <app-toolbar (toggleNavbar)="toggleNavbar()"></app-toolbar>
-  <div class="content">
+  <div class="container">
     <app-navbar [isNavbarShow]="isNavbarShow"></app-navbar>
-    <router-outlet></router-outlet>
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+    
   </div>
 </div>
