--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,5 +2,6 @@
   <div class="navbar">
     <a class="nav-link" routerLink="/books">Books</a>
     <a class="nav-link" routerLink="/autors">Autors</a>
+    <a class="nav-link" routerLink="/genres">Genres</a>
   </div>
 </div>
