semantic & lint fix

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="nav-wrapper" [class.active]="isNavbarShow">
   <div class="navbar">
     <a class="nav-link" routerLink="/books">Books</a>
-    <a class="nav-link" routerLink="/autors">Autors</a>
+    <a class="nav-link" routerLink="/authors">Authors</a>
     <a class="nav-link" routerLink="/genres">Genres</a>
   </div>
 </div>
