--- a/src/app/genres/components/genres/genres.component.scss
+++ b/src/app/genres/components/genres/genres.component.scss
@@ -1,8 +1,11 @@
+@import 'src/mat-theme.scss';
+$primary: map-get($my-primary, default);
+$accent: map-get($my-accent, A400);
+
 .genres-wrapper{
     height: 100%;
     padding: 50px;
 }
-
 .genres{
     margin: 0px auto;
     border-radius: 5px;
@@ -18,7 +21,7 @@
     margin: 10px;
     width: 40%;
     flex-grow: 1;
-    background-color: rgb(103 58 183 / 80%);   
+    background-color: $accent;   
     border-radius: 5px; 
     transition-duration: 0.1s;
     word-wrap: break-word;
@@ -28,7 +31,7 @@
 .genre:hover{
     cursor: pointer;
     transform: scale(1.02);
-    background-color: rgb(103 58 183);  
+    background-color: $primary;  
 }
 .genre:active{
     transform: scale(0.99);
