--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="nav-wrapper" [class.active]="isNavbarShow">
   <div class="navbar">
-    <a class="nav-link" routerLink="/books">Books</a>
-    <a class="nav-link" routerLink="/authors">Authors</a>
-    <a class="nav-link" routerLink="/genres">Genres</a>
+    <a class="nav-link" routerLink="/books" routerLinkActive='active-link'>Books</a>
+    <a class="nav-link" routerLink="/authors" routerLinkActive='active-link'>Authors</a>
+    <a class="nav-link" routerLink="/genres" routerLinkActive='active-link'>Genres</a>
   </div>
 </div>
