--- a/src/app/authors/components/authors/authors.component.html
+++ b/src/app/authors/components/authors/authors.component.html
@@ -5,7 +5,10 @@
         </span>
     </div>
     <div>
-        <mat-paginator [length]="meta.records" [pageSize]="meta.limit">
+        <mat-paginator [pageIndex]="meta.page - 1"
+        [length]="meta.records" [pageSize]="meta.limit"
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        (page)='handlePage($event)'>
         </mat-paginator>
     </div>
 </div>
