--- a/src/app/books/components/books-container/books-container.component.html
+++ b/src/app/books/components/books-container/books-container.component.html
@@ -5,8 +5,9 @@
         </div>
     </div>
     <div>
-        <mat-paginator #paginator [pageIndex]="meta.page - 1"
+        <mat-paginator [pageIndex]="meta.page - 1"
          [length]="meta.records" [pageSize]="meta.limit"
+         [pageSizeOptions]="[5, 10, 25, 100]"
          (page)='handlePage($event)'>
         </mat-paginator>
     </div>
