--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -13,16 +13,11 @@
   </div>
 
   <div class="flex-right">
-    <button
-      mat-icon-button
-      class="example-icon favorite-icon"
-    >
-      <mat-icon>shopping_basket</mat-icon>
+    <button (click)="navToCreateBook()" mat-icon-button>
+      <mat-icon>book</mat-icon>
     </button>
-    <button
-      mat-icon-button
-      class="example-icon"
-    >
+
+    <button mat-icon-button>
       <mat-icon>share</mat-icon>
     </button>
   </div>
