--- a/src/app/books/components/book-create/book-create.component.html
+++ b/src/app/books/components/book-create/book-create.component.html
@@ -7,7 +7,7 @@
             </button>
         </div>
 
-        <form [formGroup]="form" action="">
+        <form [formGroup]="form">
             <mat-form-field class="full-width"  appearance="fill">
                 <mat-label>title</mat-label>
                 <input matInput type="text" formControlName="title">
@@ -30,13 +30,16 @@
 
             <div formArrayName="genresCtrls" class="genres-array full-width">
                 <mat-form-field *ngFor="let genreCtrl of genresCtrls.controls; let i = index"
-                 class="full-width" appearance="fill">
+                 class="full-width genres-field" appearance="fill">
                     <mat-label>genre {{i + 1}}</mat-label>
                     <mat-select [formControlName]="i">
-                        <mat-option *ngFor="let genre of genres" [value]="genre.id">
+                        <mat-option *ngFor="let genre of genres" [value]="genre">
                             {{genre.name}}
                         </mat-option>
                     </mat-select>
+                    <button *ngIf="i > 0" (click)="deleteGenreSelect(i)" class="delete-select" mat-icon-button color="warn">
+                        <mat-icon class="icon">clear</mat-icon>
+                    </button>
                 </mat-form-field>
                 <button (click)="addGenreCtrl()" class="add-genre" mat-raised-button color="accent">
                     <mat-icon class="icon">add</mat-icon>
@@ -64,7 +67,7 @@
             </mat-form-field>
 
             <div class="buttons">
-                <button mat-raised-button color="primary">Reset</button>
+                <button mat-raised-button color="primary" type="reset">Reset</button>
                 <button mat-raised-button color="primary" (click)="submit()">ShowForm</button>
             </div>
 
