--- a/src/app/books/components/book-create/book-create.component.scss
+++ b/src/app/books/components/book-create/book-create.component.scss
@@ -2,11 +2,16 @@
 $primary: map-get($my-primary, default);
 $accent: map-get($my-accent, 100);
 
+.full-width{
+    width: 100%;
+}
+
 .wrapper{
     height: 100%;
     width: 100%;
     padding: 15px;
 }
+
 .create-body{
     position: relative;
     margin: 0 auto;
@@ -17,6 +22,7 @@ $accent: map-get($my-accent, 100);
     border-radius: 10px;
     max-width: 400px;
 }
+
 .back-wrapper{
     position: absolute;
     top:0;
@@ -26,6 +32,7 @@ $accent: map-get($my-accent, 100);
     border: 2px solid $accent;
     background-color: #fff;
 }
+
 form{
     display: flex;
     width: 100%;
@@ -33,11 +40,27 @@ form{
     align-items: center;
     padding: 30px 20px 20px;
 }
-.full-width{
-    width: 100%;
-}
+
 .genres-array{
     text-align: center;
+}
+
+.genres-field{
+    position: relative;
+    .delete-select{
+        background-color: white;
+        position: absolute;
+        border-radius: 50%;
+        border: 1px solid $accent;
+        top: -40px;
+        right: -31px;
+        transform: scale(0.6);
+        .icon{
+            position: relative;
+            top: -2px;
+            transform: scale(1.5);
+        }
+    }
 }
 
 .add-genre{
@@ -45,6 +68,7 @@ form{
     padding-left: 5px;
     margin: -10px 0 10px;
 }
+
 .buttons{
     width: 100%;
     display: flex;
