--- a/src/app/books/components/filter/filter.component.html
+++ b/src/app/books/components/filter/filter.component.html
@@ -21,7 +21,7 @@
         <mat-form-field appearance="fill">
             <mat-label>Genre</mat-label>
             <mat-select ngModel name="genre" [(ngModel)]="model.genre">
-               <mat-option *ngFor="let genre of genres" [value]="genre.id">
+               <mat-option *ngFor="let genre of genres" [value]="genre.name">
                {{genre.name}}
                </mat-option>
              </mat-select>
