--- a/src/app/books/components/create/create.component.html
+++ b/src/app/books/components/create/create.component.html
@@ -76,7 +76,7 @@
                 <button mat-raised-button color="primary" type="reset">Reset</button>
                 <button mat-raised-button color="primary" 
                     (click)="submit()">
-                    ShowForm
+                    Submit
                 </button>
             </div>
 
