--- a/src/app/authors/components/list/list.component.html
+++ b/src/app/authors/components/list/list.component.html
@@ -1,7 +1,7 @@
 <div class="authors-wrapper">
     <div class="authors">
         <span class="author" *ngFor="let author of authors">
-            <a>{{author.first_name + ' ' + author.last_name}}</a>
+            <a>{{author.firstName + ' ' + author.lastName}}</a>
         </span>
     </div>
     <div>
