--- a/src/app/books/components/create/create.component.html
+++ b/src/app/books/components/create/create.component.html
@@ -60,14 +60,14 @@
 
             <mat-form-field appearance="fill">
                 <mat-label>Writing date</mat-label>
-                <input matInput [matDatepicker]="writing" formControlName="writing_date">
+                <input matInput [matDatepicker]="writing" formControlName="writingDate">
                 <mat-datepicker-toggle matSuffix [for]="writing"></mat-datepicker-toggle>
                 <mat-datepicker #writing></mat-datepicker>
             </mat-form-field>
 
             <mat-form-field appearance="fill">
                 <mat-label>Release date</mat-label>
-                <input matInput [matDatepicker]="release" formControlName="release_date">
+                <input matInput [matDatepicker]="release" formControlName="releaseDate">
                 <mat-datepicker-toggle matSuffix [for]="release"></mat-datepicker-toggle>
                 <mat-datepicker #release></mat-datepicker>
             </mat-form-field>
