create page view

--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -1,14 +1,1 @@
-<div class="wrapper">
-
-  <app-toolbar (toggleNavbar)="toggleNavbar()"></app-toolbar>
-  
-  <div class="container">
-
-    <app-navbar [isNavbarShow]="isNavbarShow"></app-navbar>
-    <div class="content">
-      <router-outlet></router-outlet>
-    </div>
-    
-  </div>
-
-</div>
+<app-page></app-page>
