genres container & list

--- a/src/app/genres/components/genres/list.component.scss
+++ b/src/app/genres/components/genres/list.component.scss
@@ -4,6 +4,7 @@ $accent: map-get($my-accent, A400);
 
 .genres-wrapper{
     height: 100%;
+    background-color: red;
     padding: 50px;
 }
 .genres{
