--- a/src/app/genres/components/genres/list.component.html
+++ b/src/app/genres/components/genres/list.component.html
@@ -1,14 +1,14 @@
-<div class="genres-wrapper">
+<div class="genres-wrapper" *ngIf="(genres$ | async) as response">
     <div class="genres">
-        <span class="genre" *ngFor="let genre of genres">
+        <span class="genre" *ngFor="let genre of response.genres">
             {{genre.name}}
         </span>
     </div>
     <div>
-        <mat-paginator [pageIndex]="meta.page - 1"
+        <!-- <mat-paginator [pageIndex]="meta.page - 1"
          [length]="meta.records" [pageSize]="meta.limit"
          [pageSizeOptions]="[5, 10, 25, 100]"
          (page)='handlePage($event)'>
-        </mat-paginator>
+        </mat-paginator> -->
     </div>
 </div>
