--- a/src/app/genres/containers/genres-container/genres-container.component.html
+++ b/src/app/genres/containers/genres-container/genres-container.component.html
@@ -1,2 +1,2 @@
-<genres-list [genres]="genresData$"></genres-list>
+<genres-list [genres]="genresData$" (switchPage)="switchPage($event)"></genres-list>
 
