--- a/src/app/genres/components/genres/list.component.html
+++ b/src/app/genres/components/genres/list.component.html
@@ -4,11 +4,11 @@
             {{genre.name}}
         </span>
     </div>
-    <div>
-        <!-- <mat-paginator [pageIndex]="meta.page - 1"
+    <div *ngIf="response.meta as meta">
+        <mat-paginator [pageIndex]="meta.page - 1"
          [length]="meta.records" [pageSize]="meta.limit"
          [pageSizeOptions]="[5, 10, 25, 100]"
          (page)='handlePage($event)'>
-        </mat-paginator> -->
+        </mat-paginator>
     </div>
 </div>
