books module changes

--- a/src/app/books/components/components/filter/filter.component.html
+++ b/src/app/books/components/components/filter/filter.component.html
@@ -66,5 +66,5 @@
 
 <mat-dialog-actions class="buttons">
     <button mat-button mat-dialog-close>Close</button>
-    <button mat-button [disabled]="form.invalid || form.pristine" (click)="closeDialog()">Apply</button>
+    <button mat-button [disabled]="form.invalid || form.pristine" (click)="closeThisDialog()">Apply</button>
 </mat-dialog-actions>
