--- a/src/app/books/components/components/create/create.component.scss
+++ b/src/app/books/components/components/create/create.component.scss
@@ -31,6 +31,13 @@ $accent: map-get($my-accent, 100);
     border-radius: 50%;
     border: 2px solid $accent;
     background-color: #fff;
+    transition-duration: 0.5s;
+    &:hover{
+        background-color: $primary;
+        .back-icon{
+            color: white;
+        }
+    }
 }
 
 form{
@@ -67,15 +74,22 @@ form{
     position: relative;
     padding-left: 5px;
     margin: -10px 0 10px;
+    &:hover{
+        background-color: $primary;
+    }
 }
 
 .buttons{
     width: 100%;
     display: flex;
     justify-content: space-around;
-    button{
+    .form-button{
         flex-grow: 1;
         max-width: 100px;
+        transition: 0.2s;
+        &:hover{
+            transform: scale(1.03);
+        }
     }
 }
 
