lint fixes and books folders changes

--- a/src/app/books/components/count-picker/count-picker.component.html
+++ b/src/app/books/components/count-picker/count-picker.component.html
@@ -9,7 +9,8 @@
 
     <input #input [value]="value" class="count-i" (input)="onInput(input)">
 
-    <button mat-flat-button color="primary"
+    <button mat-flat-button
+     color="primary"
      class="count-b"
      (click)="onAdd()"
      [disabled]="value > 98">
