--- a/src/app/authors/components/list/list.component.html
+++ b/src/app/authors/components/list/list.component.html
@@ -5,8 +5,10 @@
         </span>
     </div>
     <div *ngIf="response.meta as meta">
-        <mat-paginator [pageIndex]="meta.page - 1"
-        [length]="meta.records" [pageSize]="meta.limit"
+        <mat-paginator
+        [pageIndex]="meta.page - 1"
+        [length]="meta.records"
+        [pageSize]="meta.limit"
         [pageSizeOptions]="[5, 10, 25, 100]"
         (page)='handlePage($event)'>
         </mat-paginator>
