--- a/src/app/books/components/create/create.component.html
+++ b/src/app/books/components/create/create.component.html
@@ -3,7 +3,7 @@
 
         <div class="back-wrapper">
             <button (click)="navBack()" class="back" mat-icon-button color="primary">
-                <mat-icon class="back-icon">arrow_back</mat-icon>
+                <mat-icon>arrow_back</mat-icon>
             </button>
         </div>
 
@@ -39,11 +39,20 @@
                  class="full-width genres-field" appearance="fill">
                     <mat-label>genre {{i + 1}}</mat-label>
                     <mat-select #genreSelect [formControlName]="i">
-                        <mat-option *ngFor="let genre of (genresList | filterGenres:genres) " [value]="genre">
+                        <mat-option
+                         *ngFor="let genre of (genresList | filterGenres:genres) " 
+                         [value]="genre"
+                        >
                             {{genre.name}}
                         </mat-option>
                     </mat-select>
-                    <button type="button" *ngIf="i > 0" (click)="deleteGenreSelect(i)" class="delete-select" mat-icon-button color="warn">
+                    <button type="button" 
+                      mat-icon-button 
+                      *ngIf="i > 0" 
+                      (click)="deleteGenreSelect(i)" 
+                      class="delete-select" 
+                      color="warn"
+                    >
                         <mat-icon class="icon">clear</mat-icon>
                     </button>
                 </mat-form-field>
@@ -84,8 +93,8 @@
             </mat-form-field>
 
             <div class="buttons">
-                <button class="form-button" mat-raised-button color="primary" type="reset">Reset</button>
-                <button class="form-button" mat-raised-button
+                <button mat-raised-button color="primary" type="reset">Reset</button>
+                <button mat-raised-button
                  color="primary" 
                  (click)="submit()"
                  [disabled]="form.invalid || form.pristine">
