--- a/src/app/books/components/create/create.component.html
+++ b/src/app/books/components/create/create.component.html
@@ -29,7 +29,7 @@
                 >
                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFullNameAndTakeId">
                   <mat-option *ngFor="let author of authorsList" [value]="author">
-                    {{getFullName(author)}}
+                    {{author.firstName + " " + author.lastName}}
                   </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
