add auth module (need work)

--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -16,9 +16,8 @@
     <button (click)="navToCreateBook()" mat-icon-button>
       <mat-icon>book</mat-icon>
     </button>
-
-    <button mat-icon-button>
-      <mat-icon>share</mat-icon>
+    <button (click)="navToAuth()" mat-icon-button>
+      <mat-icon>account_circle</mat-icon>
     </button>
   </div>
   
