--- a/src/app/authorization/views/form-view/form-view.component.scss
+++ b/src/app/authorization/views/form-view/form-view.component.scss
@@ -1,7 +1,27 @@
+@import 'src/mat-theme.scss';
+$primary: map-get($my-primary, default);
+$accent: map-get($my-accent, 100);
+
 .page{
     height: 100%;
     padding: 10px;
 }
+.switchers{
+    max-width: 400px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    a{
+        font-size: 18px;
+        cursor: pointer;
+        border-bottom: 2px solid rgba(180, 175, 175, 0.541);
+        transition-duration: 0.3s;
+        &.active{
+            border-bottom: 2px solid $primary;
+        }
+    }
+}
 .form-wrapper{
+    max-width: 500px;
     margin: 20px auto 0;
 }
