--- a/src/app/layout/views/page/page.component.html
+++ b/src/app/layout/views/page/page.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
 
-  <app-toolbar (toggleNavbar)="toggleNavbar()"></app-toolbar>
+  <app-toolbar-container (toggleNavbar)="toggleNavbar()"></app-toolbar-container>
   
   <div class="container">
     <app-navbar [isNavbarShow]="isNavbarShow"></app-navbar>
