--- a/src/app/layout/components/toolbar/toolbar.component.scss
+++ b/src/app/layout/components/toolbar/toolbar.component.scss
@@ -9,6 +9,23 @@
   z-index: 1;
 }
 
+.user-button{
+  position: relative;
+  .user-status{
+    display: inline-block;
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    border-radius: 50%;
+    padding: 6px;
+    z-index: 1;
+    background-color: rgb(148, 148, 148);
+    &.online{
+      background-color: rgb(33, 233, 33);
+    }
+  }
+}
+
 @media (min-width: 480px) {
   .title {
     margin-left: 20px;
